--- a/style/style.css
+++ b/style/style.css
@@ -154,3 +154,29 @@
     margin-top: 16px;
     margin-bottom: 32px;    
 }
+
+/* My Inspiration Section */
+#my_inspiration_section{
+    height: 775px;
+}
+.my_inspiration_content{
+    width: 852px;
+    height: 113px;
+    text-align: center;
+    margin: 0 auto;
+}
+.my_inspiration_content > h3{
+    margin-bottom: 24px;
+}
+.iframe_container{
+    height: 614px;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+    padding: 32px;
+    margin-top: 20px;
+}
+.iframe_container > iframe{
+    border-radius: 16px;
+    width: 100%;
+    height: 100%;
+}
