My Current Section Added

--- a/style/style.css
+++ b/style/style.css
@@ -94,7 +94,15 @@
     font-size: 20;
     font: 600;
 }
-
+.card_color_1{
+    background-color: rgba(255, 76, 30, 0.05);
+}
+.card_color_2{
+    background-color: rgba(0, 76, 232, 0.05);
+}
+.card_color_3{
+    background-color: rgba(255, 223, 0, 0.05);
+}
 /* Nav Section */
 #nav_container{
     display: flex;
@@ -179,4 +187,32 @@
     border-radius: 16px;
     width: 100%;
     height: 100%;
+}
+
+/* My Current Target Section */
+#my_current_target_section{
+    height: 460px;
+}
+.my_current_target_section_header{
+    text-align: center;
+    width: 946px;
+    margin: 0 auto;
+}
+.my_current_target_section_header > p{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.my_current_target_section_card_item{
+    width: 330px;
+    height: 280px;
+    padding: 30px;
+    border-radius: 16px;
+    margin-top: 10px;
+}
+.my_current_target_section_card_item > img, h3, p{
+    margin-bottom: 24px;
+}
+.my_current_target_section_card_container{
+    display: flex;
+    justify-content: space-between;
 }
