--- a/style/style.css
+++ b/style/style.css
@@ -216,3 +216,26 @@
     display: flex;
     justify-content: space-between;
 }
+
+/* My Next Target Section */
+#my_next_target_section{
+    height: 866px;
+}
+.my_next_target_section_header{
+    width: 946px;
+    height: 113px;
+    text-align: center;
+    margin: 0 auto 48px auto;
+}
+.my_next_target_section_header > p{
+    margin-top: 24px;
+}
+.my_next_target_section_card_item{
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 16px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    display: flex;
+    column-gap: 24px;
+    padding: 40px;
+    margin-bottom: 24px;
+}
